--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,8 +9,8 @@ import "../styles/styles.scss";
     <Head {title} {description} />
     <body>
         <Nav />
-        <main>
-            <div class="container">
+        <main class="container">
+            <div>
                 <slot />
             </div>
         </main>
