--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -3,12 +3,12 @@ import "../styles/styles.scss";
 ---
 
 <header>
-  <div class="top-nav container">
+  <div class="top-nav">
     <a href="tel:780-906-9959">780-906-9959</a>
     <span>|</span>
     <a href="mailto:info@printedonline.ca">info@printedonline.ca</a>
   </div>
-  <div class="nav-container container">
+  <div class="nav-container">
     <a href="/"
       ><img src="/assets/printed-logo-nav.png" alt="Logo image for Print|ED." /></a
     >
