--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -3,7 +3,7 @@
 
 footer {
   background-color: $primary-blue;
-  padding: 32px 16px 16px 16px;
+  padding: 32px 0 1rem 0;
 
   .footer-navigation {
     display: flex;
@@ -60,7 +60,7 @@ footer {
 }
 
 .footer-copyright {
-  padding-top: 45px;
+  margin-top: 45px;
 }
 
 .footer-line {
