--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -13,7 +13,7 @@ header {
         display: flex;
         gap: .5rem;
         background-color: $primary-blue;
-        padding: 6px 0;
+        padding: 6px 1rem;
 
         a, span {
             font-size: 16px;
@@ -27,7 +27,7 @@ header {
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
-        padding: 1rem 0;
+        padding: 1rem;
 
         svg {
             width: 50px;
@@ -109,6 +109,7 @@ main {
         position: unset;
 
         .top-nav {
+            padding: 6px 30px;
             a, span {
                 font-size: 20px;
             }
@@ -116,7 +117,7 @@ main {
 
         .nav-container {
             flex-wrap: unset;
-
+            padding: 1rem 30px;
             button {
                 display: none;
             }
