Fixed hover transition to nav box-shadow

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -67,7 +67,7 @@ header {
                 a:hover,
                 a:active {
                     background-color: $secondary-yellow;
-                    transition: background-color 0.3s ease-in-out; 
+                    transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out; 
                 }
             }
         }
