--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ import "../styles/styles.scss";
     <Head {title} {description} />
     <body>
         <Nav />
-        <main class="container">
+        <main>
             <div>
                 <slot />
             </div>
