--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -89,7 +89,7 @@ header {
 }
 
 main {
-    margin-top: 137.25px;
+    margin-top: 130px;
 }
 
 @media (min-width: 320px) {
@@ -155,7 +155,7 @@ main {
                     }
 
                     a:hover {
-                        padding: 1rem 1rem 3rem 1rem;
+                        padding: 1rem 1rem 51px 1rem;
                         border-radius: 12px 12px 0 0;
                         box-shadow: 4px 0 3px 0 rgba(74, 68, 68, 0.50);
                     }
