--- a/src/components/Services/Hero.astro
+++ b/src/components/Services/Hero.astro
@@ -3,7 +3,7 @@ const {serviceHeroHeader, serviceHeroDesc, serviceHeroBtn, serviceHeroImage, ser
 import "../../styles/styles.scss";
 ---
 
-<div>
+<div class="service-hero">
     <h1>{serviceHeroHeader}</h1>
     <img src={serviceHeroImage} alt={servicesAltText}>
     <p>{serviceHeroDesc}</p>
