--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,5 @@
+@use 'colours' as *;
+
 @mixin btn ($bg-colour, $text-colour, $hover-bg-colour) {
     font-weight: bold;
     background-color: $bg-colour;
@@ -13,4 +15,11 @@
     &:hover {
         background-color: $hover-bg-colour;
     }
+}
+
+@mixin white-card {
+    background-color: $white;
+    padding: 0 1rem 1rem 1rem;
+    filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 0 0 15px 15px;
 }
