Fixed container rules and added max width to container

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -29,11 +29,12 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 40px;
 }
 
 .footer-nav-container {
   display: flex;
-  gap: 16px;
+  gap: 1rem;
 }
 
 .footer-request {
@@ -57,10 +58,6 @@ footer {
 
 .footer-phone {
   margin: 32px 0px;
-}
-
-.footer-copyright {
-  margin-top: 45px;
 }
 
 .footer-line {
