--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -4,46 +4,50 @@ import "../styles/styles.scss";
 
 <header>
   <div class="top-nav">
-    <a href="tel:780-906-9959">780-906-9959</a>
-    <span>|</span>
-    <a href="mailto:info@printedonline.ca">info@printedonline.ca</a>
+    <div class="container">
+      <a href="tel:780-906-9959">780-906-9959</a>
+      <span>|</span>
+      <a href="mailto:info@printedonline.ca">info@printedonline.ca</a>
+    </div>
   </div>
-  <div class="nav-container">
-    <a href="/"
-      ><img src="/assets/printed-logo-nav.png" alt="Logo image for Print|ED." /></a
-    >
-    <button class="toggle-nav">
-      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
-        ><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g
-          id="SVGRepo_tracerCarrier"
-          stroke-linecap="round"
-          stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier">
-          <path
-            d="M20 7L4 7"
-            stroke="#1C274C"
-            stroke-width="1.5"
-            stroke-linecap="round"></path>
-          <path
-            d="M20 12L4 12"
-            stroke="#1C274C"
-            stroke-width="1.5"
-            stroke-linecap="round"></path>
-          <path
-            d="M20 17L4 17"
-            stroke="#1C274C"
-            stroke-width="1.5"
-            stroke-linecap="round"></path>
-        </g></svg>
-    </button>
-    <nav>
-      <ul>
-        <li><a href="/products">Our Products</a></li>
-        <li><a href="/services">Online Services</a></li>
-        <li><a href="/contact-us">Contact Us</a></li>
-        <li><a href="/about">About Us</a></li>
-      </ul>
-    </nav>
-    <a href="/request-quote" class="request">Request Quote</a>
+  <div class="container">
+    <div class="nav-container">
+      <a href="/"
+        ><img src="/assets/printed-logo-nav.png" alt="Logo image for Print|ED." /></a
+      >
+      <button class="toggle-nav">
+        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
+          ><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g
+            id="SVGRepo_tracerCarrier"
+            stroke-linecap="round"
+            stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier">
+            <path
+              d="M20 7L4 7"
+              stroke="#1C274C"
+              stroke-width="1.5"
+              stroke-linecap="round"></path>
+            <path
+              d="M20 12L4 12"
+              stroke="#1C274C"
+              stroke-width="1.5"
+              stroke-linecap="round"></path>
+            <path
+              d="M20 17L4 17"
+              stroke="#1C274C"
+              stroke-width="1.5"
+              stroke-linecap="round"></path>
+          </g></svg>
+      </button>
+      <nav>
+        <ul>
+          <li><a href="/products">Our Products</a></li>
+          <li><a href="/services">Online Services</a></li>
+          <li><a href="/contact-us">Contact Us</a></li>
+          <li><a href="/about">About Us</a></li>
+        </ul>
+      </nav>
+      <a href="/request-quote" class="request">Request Quote</a>
+    </div>
   </div>
 </header>
 
