--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,9 +1,12 @@
 .container {
     padding: 0 1rem 0 1rem;
+    margin: 0 auto;
+
 }
 
 @media (min-width: 1000px) {
     .container {
         padding: 0 30px 0 30px;
+        max-width: 1920px;
     }
 }
