Nav ul gap change and Head title/description change

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import Head from "./Head.astro";
 import Nav from "./Nav.astro";
 import Footer from "./Footer.astro";
-const {title = "Printed", description = "Welcome to Printed!"} = Astro.props;
+const {title = "Print|ED Home", description = "Welcome to Print|ED!"} = Astro.props;
 import "../styles/styles.scss";
 ---
 <html>
