--- a/src/styles/_service-about-pages.scss
+++ b/src/styles/_service-about-pages.scss
@@ -40,7 +40,66 @@
     }
 }
 
+//About Us Page Styles
+.about-hero {
+    @include white-card;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: 700px;
+    margin: 0 auto;
+
+    h1 {
+        color: $primary-blue;
+        margin-top: 1rem
+    }
+
+    .hero-tag {
+        p {
+            font-weight: 600;
+        }
+    }
+}
+
+.about-bg {
+    background-color: $tertiary-dark-blue;
+    color: $white;
+    margin: 6rem 0 6rem 0;
+
+    .about-wide-flex {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 1rem;
+        max-width: 700px;
+    }
+
+    .about-flex {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding: 1rem 0;
+
+        .set-apart-flex {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+
+            .set-apart-tag {
+                p {
+                    font-weight: 600;
+                }
+            }
+        }
+
+        .about-btn {
+            @include btn ($white, $tertiary-dark-blue, #A0D3FF);
+        }
+    }
+}
+
 @media (min-width: 1000px) {
+
+    //Online Services
     .service-hero {
         padding: 0 2rem 2rem 2rem;
         max-width: unset;
@@ -68,54 +127,41 @@
 
         }
     }
-}
 
-//About Us Page Styles
-.about-hero {
-    @include white-card;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    max-width: 700px;
-    margin: 0 auto;
+    //About Us 
+    .about-hero {
+        padding: 0 2rem 2rem 2rem;
+        max-width: unset;
+        width: 763px;
+        border-radius: 15px;
+        margin: 9rem 0 9rem 10vw;
 
-    h1 {
-        color: $primary-blue;
-        margin-top: 1rem
-    }
-
-    .hero-tag {
-        p {
-            font-weight: 600;
+        img {
+            display: none;
         }
     }
-}
 
-.about-bg {
-    background-color: $tertiary-dark-blue;
-    color: $white;
-    margin: 6rem 0 6rem 0;
+    .about-bg {
+        margin: 9rem 0 9rem 0;
 
-    .about-flex {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        padding: 1rem ;
-
-        .set-apart-flex {
-            display: flex;
-            flex-direction: column;
+        .about-wide-flex {
+            flex-direction: row;
+            align-items: center;
+            max-width: 1254px;
             gap: 1rem;
+            padding: 4rem 0;
 
-            .set-apart-tag {
-                p {
-                    font-weight: 600;
-                }
+            img {
+                width: 100%;
             }
         }
 
-        .about-btn {
-            @include btn ($white, $tertiary-dark-blue, #A0D3FF);
+        .about-flex {
+            .about-btn {
+                width: 316px;
+            }
         }
+
     }
+
 }
