added div class of forms-page-wrapper to forms pages, so hero and form can flex next to each other on desktop layout

--- a/src/components/RequestQuote/Hero.astro
+++ b/src/components/RequestQuote/Hero.astro
@@ -3,6 +3,8 @@ const {requestquoteHeader, requestquoteText, requestquotePhone, requestquoteEmai
 
 ---
 
+
+<div class="forms-page-wrapper">
 <div class="contact-info-card">
     <div class="form-h1">
         <h1>{requestquoteHeader}</h1>
