--- a/src/components/RequestQuote/RequestQuoteForm.astro
+++ b/src/components/RequestQuote/RequestQuoteForm.astro
@@ -107,7 +107,7 @@ Examples include sizes, materials, colours, specifications, questions, and detai
         <input type="submit" value={requestquoteBtn} class="submit-btn" />
     </form>
 </div>
-
+</div>
 
 <script>
     import { requestQuoteFormValidation } from "../../lib/formValidation";
