--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -28,6 +28,8 @@ const {FullName, Email, Phone, Message, sendmessageBtn} = contactusFormData;
 ---
 
 <Layout>
-    <Hero {contactusHeader} {contactusText} {callusTitle} {callusText} {emailTitle} {emailText} />
-    <ContactUsForm {FullName} {Email} {Phone} {Message} {sendmessageBtn} />
+    <div class="forms-page-wrapper">
+      <Hero {contactusHeader} {contactusText} {callusTitle} {callusText} {emailTitle} {emailText} />
+      <ContactUsForm {FullName} {Email} {Phone} {Message} {sendmessageBtn} />
+    </div>
 </Layout>
