--- a/src/pages/request-quote.astro
+++ b/src/pages/request-quote.astro
@@ -28,6 +28,8 @@ const {Subject, FullName, Email, Phone, CompanyName, ProductType, Quantity, File
 ---
 
 <Layout>
-    <Hero {requestquoteHeader} {requestquoteText} {requestquotePhone} {requestquoteEmail}  />
-    <RequestQuoteForm {Subject} {FullName} {Email} {Phone} {CompanyName} {ProductType} {Quantity} {FileUpload} {AdditionalDetails} {requestquoteBtn} />
+    <div class="forms-page-wrapper">
+      <Hero {requestquoteHeader} {requestquoteText} {requestquotePhone} {requestquoteEmail}  />
+      <RequestQuoteForm {Subject} {FullName} {Email} {Phone} {CompanyName} {ProductType} {Quantity} {FileUpload} {AdditionalDetails} {requestquoteBtn} />
+    </div>
 </Layout>
