--- a/src/styles/_form-pages.scss
+++ b/src/styles/_form-pages.scss
@@ -45,12 +45,12 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 1rem;
 
-    input{
+    input,
+    select{
         width: 100%;
         height: 55px;
         margin-bottom: 1rem;
 
-    
     }
 }
 
@@ -59,10 +59,28 @@ label{
     
     font-weight: bold;
 }
+
+input::placeholder,
+textarea::placeholder,
+option{
+    font-family: 'assistant', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: $grey;
+}
 .message-box{
     height: 256px;
     width: 100%;
    
+}
+.product-type-quantity{
+    display: flex;
+    gap: 1rem;
+
+    div{
+        flex: 1;
+    }   
+    
 }
 .submit-btn {
   @include btn ($white, $tertiary-dark-blue, #FFEDAD);
@@ -74,13 +92,44 @@ label{
 //desktop layout
 @media (min-width: 1000px) {
    
+
+    .hero-grid{
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        gap:1rem;
+        align-items: start;
+    }
+
+    .form-h1{
+        grid-column: 1 / span 12;
+    }
+    .form-h1 h1{
+        grid-column: 6/ span 6;
+    }
+    .contact-card{
+        grid-column: 6/ span 6;
+    }
+
     .forms-page-wrapper{
-          gap: 2rem;
-          margin: 0 auto;
+
+          margin-bottom: 144px;
+          gap: 1rem;
           display:grid;
-          grid-template-columns: 350px 1fr;
+          grid-template-columns: repeat(12, 1fr);
+          align-items: start;
+          padding: 20px;
       }
+    
+    .forms-page-wrapper > :first-child{
+        grid-column: 1 / span 5;
 
+    
+    }
 
+    .form-card{
+        grid-column: 7/ span 3;
+        margin-top: 144px;
+        
+    }
 
 }
