Fixed page names for SEO

--- a/src/components/Products/FeaturedProducts.astro
+++ b/src/components/Products/FeaturedProducts.astro
@@ -21,16 +21,16 @@ const {
     <section>
         <h3>{pressuresealTitle}</h3>
         <img src={pressuresealImage} alt={pressureSealAltText}>
-        <a href="/pressuresealenvelope">{pressuresealBtn}</a>
+        <a href="/pressure-seal-forms">{pressuresealBtn}</a>
     </section>
     <section>
         <h3>{linerlessTitle}</h3>
         <img src={linerlessImage} alt={linerlessLabelAltText}>
-        <a href="/linerlesslabel">{linerlessBtn}</a>
+        <a href="/linerless-labels">{linerlessBtn}</a>
     </section>
     <section>
         <h3>{integratedformTitle}</h3>
         <img src={integratedformImage} alt={integratedFormAltText}>
-        <a href="/integratedformlabel">{integratedformBtn}</a>
+        <a href="/integrated-form-labels">{integratedformBtn}</a>
     </section>
 </div>
