--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -25,15 +25,15 @@ import "../styles/styles.scss";
       <div>
         <div class="footer-nav-container">
           <ul class="footer-nav">
-            <li><a href="/about">About Us</a></li>
+            <li><a href="/about-us">About Us</a></li>
             <li><a href="/products">Our Products</a></li>
             <li><a href="/contact-us">Contact Us</a></li>
-            <li><a href="/services">Online Services</a></li>
+            <li><a href="/online-services">Online Services</a></li>
           </ul>
           <ul class="footer-products">
-            <li><a href="/linerlesslabel">Linerless Labels</a></li>
-            <li><a href="/pressuresealenvelope">Pressure Seal Forms</a></li>
-            <li><a href="/integratedformlabel">Integrated Label/Form Combinations</a></li>
+            <li><a href="/linerless-labels">Linerless Labels</a></li>
+            <li><a href="/pressure-seal-forms">Pressure Seal Forms</a></li>
+            <li><a href="/integrated-form-labels">Integrated Label/Form Combinations</a></li>
           </ul>
         </div>
       </div>
