--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -41,9 +41,9 @@ import "../styles/styles.scss";
       <nav>
         <ul>
           <li><a href="/products">Our Products</a></li>
-          <li><a href="/services">Online Services</a></li>
+          <li><a href="/online-services">Online Services</a></li>
           <li><a href="/contact-us">Contact Us</a></li>
-          <li><a href="/about">About Us</a></li>
+          <li><a href="/about-us">About Us</a></li>
         </ul>
       </nav>
       <a href="/request-quote" class="request">Request Quote</a>
