--- a/src/components/IntegratedForm/WhatIs.astro
+++ b/src/components/IntegratedForm/WhatIs.astro
@@ -10,17 +10,20 @@ const {
     integratedformImage3,
     integratedformAltText3
 } = Astro.props;
+import "../../styles/styles.scss";
 ---
 
-<div>
-<div>
-    <h2>{integratedformlabelWhatIsTitle}</h2>
-    <p>{integratedformlabelWhatIsDesc}</p>
-    <p>{integratedsolutionText}</p>
-    <div>
+<div class="featured-products-container">
+    <div class="featured-products-info">
+        <h2>{integratedformlabelWhatIsTitle}</h2>
+        <p>{integratedformlabelWhatIsDesc}</p>
+        <p>{integratedsolutionText}</p>
+    </div>
+    <div class="integrated-form-img">
         <img src={integratedformImage1} alt={integratedformAltText1}>
         <img src={integratedformImage2} alt={integratedformAltText2}>
-        <img src={integratedformImage3} alt={integratedformAltText3}>
+        <div class="integrated-last-img">
+            <img src={integratedformImage3} alt={integratedformAltText3}>
+        </div>
     </div>
-</div>
 </div>
