--- a/src/components/PressureSeal/SecureFold.astro
+++ b/src/components/PressureSeal/SecureFold.astro
@@ -1,17 +1,22 @@
 ---
 const {idealforText, payroll, taxforms, statements, utilitybills, directmail, securefoldImage, securefoldAltText,  securefoldBtn, securefoldTitle} = Astro.props;
+import "../../styles/styles.scss";
 ---
 
-<div>
-    <h2>{securefoldTitle}</h2>
-    <p>{idealforText}</p>
-    <ul>
-        <li>{payroll}</li>
-        <li>{taxforms}</li>
-        <li>{statements}</li>
-        <li>{utilitybills}</li>
-        <li>{directmail}</li>
-    </ul>
-    <img src={securefoldImage} alt={securefoldAltText}>
-    <a href="#">{securefoldBtn}</a>
+<div class="featured-products-additional-info">
+    <h2 class="featured-products-header">{securefoldTitle}</h2>
+    <div class="featured-products-infolist">
+        <p>{idealforText}</p>
+        <ul>
+            <li>{payroll}</li>
+            <li>{taxforms}</li>
+            <li>{statements}</li>
+            <li>{utilitybills}</li>
+            <li>{directmail}</li>
+        </ul>
+        <div>
+            <img src={securefoldImage} alt={securefoldAltText}>
+            <a href="/request-quote" class="featured-products-btn">{securefoldBtn}</a>
+        </div>
+    </div>
 </div>
