--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -23,3 +23,22 @@
     filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 0 0 15px 15px;
 }
+
+@mixin products-hero-card ($bg-colour) {
+    background-color: $bg-colour;
+    padding: 0 1rem 1rem 1rem;
+    filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 15px;
+}
+
+@mixin yellow-header-products {
+    background-color: $secondary-yellow ;
+    padding: 1rem 1rem 1rem 2rem;
+    border-radius: 15px;
+    position: relative;
+    z-index: 1;
+    left: -20px;
+    top: 25px;
+    max-width: 793px;
+    color: $tertiary-dark-blue;
+}
