--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -22,7 +22,8 @@ h4 {
     font-size: 20px;
 }
 
-p {
+p,
+li {
     font-family: 'assistant', sans-serif;
     font-weight: 400;
     font-size: 20px;
