--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,17 +1,9 @@
 ---
+import Layout from "../layouts/Layout.astro";
 ---
 
-<html lang="en">
-  <head>
-    <title>Page Not Found</title>
-  </head>
-
-  <body>
-    <h1>404</h1>
-    <p>Oops! Page could not be found.</p>
-
-    <a href="/">
-      Back to Home
-    </a>
-  </body>
-</html>
+<Layout>
+  <h1>404</h1>
+  <p>Oops! Page could not be found.</p>
+  <a href="/"> Back to Home </a>
+</Layout>
